$Id: NEWS,v 1.94 2004-11-02 13:29:27 karl Exp $
This file records noteworthy changes.

  Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
  2001, 2002, 2003, 2004 Free Software Foundation, Inc.

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.


*** IMPORTANT NEWS FOR ALL AUTHORS OF TEXINFO MANUALS ***

As of version 4.2, Texinfo has a new command @copying to define the
copyright and copying permissions for a manual.  It's important to
switch to using it as soon as possible (as in your next release),
because the historical method of doing copyright permissions using
@ifinfo failed to output copyright information in the HTML (or XML)
formats.  The manual has detailed explanations and examples.  For
convenience, here's a url to one of the relevant sections:
  http://www.gnu.org/software/texinfo/manual/texinfo/html_node/Document-Permissions.html

-------------------------------------------------------------------------------
* Language:
  . new command @abbr for general abbreviations.
  . new command @slanted to typeset text with a slanted font.
* texi2dvi:
  . calls recode if installed and @documentencoding is specified.
* Distribution:
  . new convenience script texi2pdf, equivalent to texi2dvi --pdf (from tetex).
  . some cross-compiling support in configure && make.
  . automake 1.9.3.

4.7 (9 April 2004)
* Language:
  . new commands @float, @caption, @shortcaption, @listoffloats for
    initial implementation of floating material (figures, tables, etc).
    Ironically, they do not yet actually float anywhere.
  . new commands @docbook, @ifdocbook, @ifnotdocbook for conditional Docbook.
  . new commands @ordf{} and @ordm{} for Spanish feminine/masculine ordinals.
  . new commands @deftypecv[x] for class variables in typed OO languages.
  . new command @registeredsymbol for the r-in-a-circle symbol.